SkyRunners / Product / Fixed layout issue And links

--- a/Code/stylesheet.css
+++ b/Code/stylesheet.css
@@ -52,7 +52,7 @@ nav > ul > li{
     height:25px;
     width: 100px;
     border: 3px solid white;
-    transition: height 0.3s ease-in-out, width 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    transition: height 0.15s ease-in-out, width 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 nav > ul > li:hover{
     width: 105px;
@@ -102,7 +102,6 @@ aside{
 #Standard{
     display: flex;
     flex-direction: column;
-    flex:1;
     height: 30%;
     border: 3px solid white;
     background-color: #0874c4;
@@ -113,7 +112,6 @@ aside{
 #Message{
     display: flex;
     flex-direction: column;
-    flex:1;
     height: 30%;
     border: 3px solid white;
     background-color: #0874c4;
@@ -124,7 +122,6 @@ aside{
 #Haunting{
     display: flex;
     flex-direction: column;
-    flex:1;
     height: 30%;
     border: 3px solid white;
     background-color: #0874c4;
